--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <hr/>
    <hr/>
    <center><h1>Atul</h1></center> 
-   <center><img src=./atul.png height="150"></center>
+   <center><img src="./atul.png" height="150"/></center>
    <hr/><hr/>
    <center><u><h2>Summary</h2></u>
      </center>
